Fix z-index of picker and contents (including color picker)

--- a/scss/literallycanvas.scss
+++ b/scss/literallycanvas.scss
@@ -90,7 +90,7 @@ $optionsHeight: 65px;
 }
 
 .literally .lc-picker {
-  z-index: 1;
+  z-index: 2;
   border-right: $basicBorder;
 
   .toolbar-button {
